<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/white"
    tools:context=".UserDetails.UserDetailsActivity">

    <TextView
        android:id="@+id/__"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/please_enter_your_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/___"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/black"
        android:text="@string/these_details_will_only_be_visible_to_users_having_your_contact_number"
        android:textAlignment="center" />

    <com.github.florent37.shapeofview.shapes.CircleView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="0.3">


        <ImageView
            android:id="@+id/userImageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/default_user" />
    </com.github.florent37.shapeofview.shapes.CircleView>

    <EditText
        android:id="@+id/personNameDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="492dp" />

    <Button
        android:id="@+id/proceedDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/proceed"
        android:textColor="@color/white" />
</LinearLayout>